@@ -11,6 +11,7 @@ ctags-NEXT (Wed Oct 11 2006)
 * Added support for Perl's 'package' keyword.
 * Added support for Perl's multi-line subroutine, package, and constant
   definitions.
+* Added support for Perl subroutine declarations (off by default).
 
 ctags-5.6 (Mon May 29 2006)
 * Reformatted code for independence of tab stop setting.
